Various fixes to tests